# lv-feeder-smart-meter-data

./: .env.example  .gitignore  README.md  aggregated-by-substation.sql  geoparquet-example.ipynb  geoparquet-output.ipynb  indexes.sql  lv-feeder-smart-meter-schema.json  national-grid-downloader.py  pyproject.toml  split-geo-location.py  ssen-downloader.py  ssen-files.json  ssen-substation-location.py
